--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ steps:
   - name: Send Release to Sentry
     uses: dmandrade/sentry-release-github-action@v1
     env:
-      SENTRY_URL: https://mysentry.invalid/
+      SENTRY_URL: http://localhost:9000/
       SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
       SENTRY_ORG: foo
       SENTRY_PROJECT: bar
