--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,9 +11,8 @@ jobs:
         uses: dmandrade/sentry-release-github-action@v1
         env:
           SENTRY_URL: http://localhost:9000/
-          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_AUTH_TOKEN: zDh>0@cK_z>to^_b00\D>C1Pr-?4Z+B(N>60jpqjp+Q0gkB.IE
           SENTRY_ORG: foo
           SENTRY_PROJECT: bar
         with:
           environment: production
-          version: ${{ github.ref }}
