--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,9 @@ jobs:
         uses: dmandrade/sentry-release-github-action@v1
         env:
           SENTRY_URL: http://localhost:9000/
-          SENTRY_AUTH_TOKEN: zDh>0@cK_z>to^_b00\D>C1Pr-?4Z+B(N>60jpqjp+Q0gkB.IE
-          SENTRY_ORG: foo
-          SENTRY_PROJECT: bar
+          SENTRY_AUTH_TOKEN: 13108da674b34a0d82ea74d6b4e6136375caa3c12cfe42498d312a8ff7337372
+          SENTRY_ORG: sentry
+          SENTRY_PROJECT: javascripttest2
+        with:
+          environment: production
+          version: ${{ github.ref }}  
