--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
       - name: Sentry Release Action
         uses: dmandrade/sentry-release-github-action@v1
         env:
-          SENTRY_URL: http://localhost:9000/
+          SENTRY_URL: http://192.168.88.201:9000/
           SENTRY_AUTH_TOKEN: 13108da674b34a0d82ea74d6b4e6136375caa3c12cfe42498d312a8ff7337372
           SENTRY_ORG: sentry
           SENTRY_PROJECT: javascripttest2
