--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,19 +1,11 @@
-name: GitHub Actions Build and Deploy Demo
-on:
-  push:
-    branches:
-      - master
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Sentry Release Action
-        uses: dmandrade/sentry-release-github-action@v1
-        env:
-          SENTRY_URL: http://192.168.88.201:9000/
-          SENTRY_AUTH_TOKEN: 13108da674b34a0d82ea74d6b4e6136375caa3c12cfe42498d312a8ff7337372
-          SENTRY_ORG: sentry
-          SENTRY_PROJECT: javascripttest2
-        with:
-          environment: production
-          version: steps.release.outputs.version  
+steps:
+  - name: Send Release to Sentry
+    uses: dmandrade/sentry-release-github-action@v1
+    env:
+      SENTRY_URL: http://localhost:9000/
+      SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+      SENTRY_ORG: foo
+      SENTRY_PROJECT: bar
+    with:
+      environment: production
+      version: ${{ github.ref }}
